[Fix] Add responsive (min-height, flex-wrap)

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ nav .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   width: 70%;
   background-color: rgb(218, 165, 32);
   padding: 5px;
@@ -28,6 +29,7 @@ h1 a {
 .navbar ul {
   display: flex;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .navbar ul li {
@@ -46,7 +48,7 @@ nav .navbar button {
   display: flex;
   justify-content: center;
   align-items: center ;
-  height: 350px;
+  min-height: 350px;
   background-color: rgb(0, 0, 139);
 }
 
@@ -54,8 +56,9 @@ nav .navbar button {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  flex-wrap: wrap;
   width: 60%;
-  height: 50%;
+  min-height: 50%;
   background-color: rgb(238, 130, 238);
   text-align: center;
 }
@@ -88,9 +91,10 @@ main .container.download {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  flex-wrap: wrap;
   text-align: center;
   width: 70%;
-  height: 500px;
+  min-height: 500px;
   margin: auto;
   background-color: azure;
 }
@@ -164,7 +168,9 @@ footer .container-register {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   width: 70%;
+  min-height: 100%;
   margin: auto;
   background-color: aquamarine;
   border-top: 5px solid lightblue;
